# backend/src/modules/auth/auth.routes.ts
@@ -2,9 +2,11 @@ import { Router } from "express";
 import {
   loginController,
   logoutController,
+  meController,
   refreshController,
   registerController,
 } from "./auth.controller.js";
+import { requireAuth } from "./auth.middleware.js";
 
 const authRouter = Router();
 
@@ -12,5 +14,6 @@ authRouter.post("/register", registerController);
 authRouter.post("/login", loginController);
 authRouter.post("/refresh", refreshController);
 authRouter.post("/logout", logoutController);
+authRouter.get("/me", requireAuth, meController);
 
 export default authRouter;
